# TFG

./: Inscripció.txt  README.md  rubrica.txt
tfg/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
tfg/tfg/: Different Learners Single Instance.ipynb  Genral size PPO Learner 2.ipynb  Genral size PPO Learner 20-30.ipynb  Genral size PPO Learner 3.ipynb  Genral size PPO Learner CUDA.ipynb  Genral size PPO Learner parallel.ipynb  Genral size PPO Learner-Copy1.ipynb  Subselection Learners single size Light Attention Model.ipynb  Subselection Learners single size.ipynb  Train default params attention model.ipynb  Training light attention 2.ipynb  Training-Copy1.ipynb  Training.ipynb  params.py  run.py  tests.py  training new arch.ipynb
tfg/tfg/Models/: model.pth  params.json
tfg/tfg/controllers/: greedy_controller.py
tfg/tfg/environments/: Genral size PPO Learner 20-30-Heavy.ipynb  environment.py  environment_tsp.py
tfg/tfg/experiments/: actor_critic_experiment.py  experiment.py
tfg/tfg/generators/: tsp_generator.py
tfg/tfg/jupyter_experiments/: Different Learners Single Instance.ipynb  Full_train.ipynb  General size 20-30 Heavy.ipynb  Genral size 5-10 Heavy.ipynb  Genral size 5-10 Light.ipynb  Genral size PPO Learner-Copy1.ipynb  Genral size PPO Learner.ipynb  Learners_experiment.ipynb  PPO_learning_with_10_size.ipynb  PPO_learning_with_10_size_without_E_greedy.ipynb  Single Instance Different Learners 2.ipynb  Single Instance Different Learners.ipynb  Single Size 10 Light.ipynb  Single Size 10 Simple.ipynb  Single Size Learner PPO.ipynb  (+8 more)
(+10151 files in other folders)
