[tool.poetry]
name = "tfg"
version = "0.1.0"
description = ""
authors = ["tomasosarte <tomasosarte@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
torch = "^2.3.0"
tqdm = "^4.66.4"
matplotlib = "^3.9.0"
gurobipy = "^11.0.2"
wandb = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
